--- a/index.html
+++ b/index.html
@@ -17,20 +17,35 @@
         <li><a href="">Tags</a></li>
       </ol>
     </nav>
-
+<figure>
     <img src="images/beets.jpg" alt="beets.jpg">
 
+<figcaption>A bundle of organic beets from a local farm food co-op program</figcaption>
+</figure>
+</header>
 
-  </header>
-  <main>
-    <section>
-      <figure>
-        <img src="images/banner.svg" alt="banner.svg">
-        <figcaption>The Solar System—our home in the stars</figcaption>
-      </figure>
-    </section>
-    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+<main>
+<p>55 to 65 days are needed from germination to harvest of the root</p>
+<p>The usually deep purple roots of <b>beetroots</b> are eaten eaither grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinager, or raw and shredded, either alone or combined with any salada vegetable.</p>
+<p>In fact, Jim Halpert once said this about beets, <quote>"Fact, bears eat beets. Bears, beets, <i>Battlestart Galactica."</i></quote></p>
+<I have some <i>weird</i> habits. For instance, <strong>I love beets</strong>. Show me a salada bar and I will clean them out of their beets.</p>
+<p>- Chris Pratt</p>
+
+        <h2>Common varieties</h2>
+        <ul>
+          <li>Albino</li>
+          <li>Bull's Blood</li>
+          <li>Chioggia</li>
+          <li>Detroit Dark Red</li>
+          <li>Early Wonder</li>
+
+        </ul>
+        <h2>Nutritional information</h2>
+
+        <h2>Tags</h2>
+
+
   </main>
-
+<footer> Source: Wikipedia: Last modified: Aug 30,2014</footer>
 </body>
 </html>
