--- a/index.html
+++ b/index.html
@@ -32,20 +32,32 @@
 <p>- Chris Pratt</p>
 
         <h2>Common varieties</h2>
-        <ul>
-          <li>Albino</li>
-          <li>Bull's Blood</li>
-          <li>Chioggia</li>
-          <li>Detroit Dark Red</li>
-          <li>Early Wonder</li>
-
-        </ul>
+          <ul>
+            <li>Albino</li>
+            <li>Bull's Blood</li>
+            <li>Chioggia</li>
+            <li>Detroit Dark Red</li>
+            <li>Early Wonder</li>
+          </ul>
         <h2>Nutritional information</h2>
-
+          <ul>
+            <li>Serving Size: 100 g</li>
+            <li>Energy: 180 kj</li>
+            <li>Carbohydrates: 9.96 g</li>
+            <li>Fat: 0.18 g</li>
+            <li>Protein: 1.68 g</li>
+          </ul>
         <h2>Tags</h2>
+          <ul>
+            <li>Crimson</li>
+            <li>Awesome</li>
+            <li>Pickle-able</li>
+            <li>Vegetable!</li>
+            <li>Delicious</li>
+          </ul>
 
 
   </main>
-<footer> Source: Wikipedia: Last modified: Aug 30,2014</footer>
+<footer> Source: <li><a href="">Wikipedia</a></li>: Last modified: Aug 30,2014</footer>
 </body>
 </html>
