--- a/index.html
+++ b/index.html
@@ -17,36 +17,35 @@
         <li><a href="">Tags</a></li>
       </ol>
     </nav>
-<figure>
-    <img src="images/beets.jpg" alt="beets.jpg">
-
-<figcaption>A bundle of organic beets from a local farm food co-op program</figcaption>
-</figure>
-</header>
+    <figure>
+      <img src="images/beets.jpg" alt="beets.jpg">
+      <figcaption>A bundle of organic beets from a local farm food co-op program</figcaption>
+    </figure>
+  </header>
 
   <p>55 to 65 days are needed from germination to harvest of the root</p>
   <p>The usually deep purple roots of <b>beetroots</b> are eaten eaither grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinager, or raw and shredded, either alone or combined with any salada vegetable.</p>
   <p>In fact, Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica."</i></p>
-  <p>I have some <i>weird</i> habits. For instance, <strong>I love beets</strong>. Show me a salada bar and I will clean them out of their beets.</p>
-  <p>- Chris Pratt</p>
+  <p>I have some <i>weird</i> habits. For instance, <blockquote>I love beets</blockquote>. Show me a salada bar and I will clean them out of their beets.</p>
+  <cite>- Chris Pratt</cite>
 
-    <main>
-        <h2>Common varieties</h2>
-          <ol>
-            <li>Albino</li>
-            <li>Bull's Blood</li>
-            <li>Chioggia</li>
-            <li>Detroit Dark Red</li>
-            <li>Early Wonder</li>
-          </ol>
-        <h2>Nutritional information</h2>
-          <ul>
-            <li>Serving Size: 100 g</li>
-            <li>Energy: 180 kj</li>
-            <li>Carbohydrates: 9.96 g</li>
-            <li>Fat: 0.18 g</li>
-            <li>Protein: 1.68 g</li>
-          </ul>
+  <main>
+    <h2>Common varieties</h2>
+    <ol>
+      <li>Albino</li>
+      <li>Bull's Blood</li>
+      <li>Chioggia</li>
+      <li>Detroit Dark Red</li>
+      <li>Early Wonder</li>
+    </ol>
+    <h2>Nutritional information</h2>
+    <ul>
+      <li>Serving Size: 100 g</li>
+      <li>Energy: 180 kj</li>
+      <li>Carbohydrates: 9.96 g</li>
+      <li>Fat: 0.18 g</li>
+      <li>Protein: 1.68 g</li>
+    </ul>
 
       <aside>
         <h2>Tags</h2>
